# mod-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  deny.yml  release.yml
docs/: API.md  GUIDELINES.md  README.md
modcli/: Cargo.toml  README.md
modcli/attic/: console.rs  shell_commands.rs  shell_extensions.rs
modcli/attic/examples/: commands.json  full_app.rs
modcli/attic/loader/: sources.rs
modcli/benches/: gradient_bench.rs  output_builder_bench.rs  parser_bench.rs  registry_bench.rs  registry_try_execute_bench.rs  table_bench.rs
modcli/examples/: async_fetch.rs  banner_demo.rs  banner_file_demo.rs  buttons_demo.rs  config.json  demo.rs  form_demo.rs  full_app.rs  gated_nested_demo.rs  gen_completions.rs  gen_man.rs  gradient_multi.rs  gradient_two.rs  help_markdown_demo.rs  history_demo.rs  hooks_demo.rs  image_mosaic.rs  input_demo.rs  layout_basic.rs  layout_demo.rs  link_demo.rs  link_james.rs  menu_demo.rs  menu_demo_paged.rs  menu_keymap_demo.rs  messages_demo.rs  messages_json_demo.rs  multiprogress_demo.rs  progress_basic.rs  progress_custom.rs  progress_presets.rs  progress_real.rs  raw_form_ui.rs  style_builder.rs  styled_menu.rs  table_align.rs  table_basic.rs  table_colors.rs  table_columns.rs  table_export.rs  (+4 more)
modcli/examples/ascii/: banner.txt
modcli/examples/messages/: en.json
modcli/examples/plugins/hello-plugin/: Cargo.toml
modcli/examples/plugins/hello-plugin/src/: lib.rs
modcli/examples/themes/: sample_theme.json
modcli/src/: args.rs  command.rs  config.rs  console.rs  error.rs  lib.rs  loader.rs  output.rs  parser.rs  shell_commands.rs  shell_extensions.rs  validate.rs
modcli/src/commands/: benchmark.rs  echo.rs  framework.rs  hello.rs  help.rs  mod.rs  ping.rs  shell.rs
modcli/src/custom/: mod.rs
modcli/src/input/: builders.rs  input_builder.rs  mod.rs  secure.rs
modcli/src/loader/: plugins.rs  sources.rs
modcli/src/output/: color_picker.rs  colors.rs  gradient.rs  gradient_extras.rs  hook.rs  hooks.rs  images.rs  layout.rs  markdown.rs  messages.rs  mod.rs  print.rs  progress.rs  style.rs  table.rs  themes.rs
modcli/src/output/input/: confirm.rs  console.rs  menu.rs  mod.rs  password.rs  text.rs
modcli/src/shell/: history.rs
modcli/tests/: args_tests.rs  error_regressions.rs  parser_edge_tests.rs  parser_tests.rs  prefix_routing_tests.rs  print_tests.rs  registry_tests.rs
modcli/tests_disabled/: error_paths.rs  json_loader_tests.rs  shell_extensions_tests.rs
plugins/: libhello_plugin.dylib
tests/: error_regressions.rs  parser_edge_tests.rs  parser_tests.rs  print_tests.rs  registry_tests.rs
