#####################################################
# ¸_____¸_____¸  
#  ╲__¸ ┊ ¸__╱   James Gober 
# ¸_  ┊ ┊ ┊ ___  Software Performance Engineer
# ┊ [_┊ ┊ ┊_] ┊  code@jamesgober.dev
# ┊_____A_____┊  https://JamesGober.com
# JAMES ⬡ GOBER  - - - - - - - - - - - - - - - - - -
#####################################################
[workspace]
members = [
    "modcli"
]
resolver = "2"
