#####################################################
# ▗▖  ▗▖ ▗▄▄▖ ▗▄▄▄ 
# ▐▛▚▞▜▌▐▌  ▐▌▐▌  █
# ▐▌  ▐▌▐▌  ▐▌▐▌  █
# ▐▌  ▐▌▝▚▄▄▞▘▐▙▄▄▀ 
# ┳┳┓┏┓┳┓  ┳┓┳┳┏┓┏┳┓
# ┃┃┃┃┃┃┃  ┣┫┃┃┗┓ ┃ 
# ┛ ┗┗┛┻┛  ┛┗┗┛┗┛ ┻ 
#####################################################
[workspace]
members = [
    "modcli"
]
resolver = "2"
