#####################################################
# ¸_____¸_____¸  
#  ╲__¸ ┊ ¸__╱   James Gober 
# ¸_  ┊ ┊ ┊ ___  Software Performance Engineer
# ┊ [_┊ ┊ ┊_] ┊  code@jamesgober.dev
# ┊_____A_____┊  https://JamesGober.com
# JAMES ⬡ GOBER  - - - - - - - - - - - - - - - - - -
#####################################################
[package] 
name = "mod-cli"
version = "0.5.3"

# Minimum Supported Rust Version (MSRV)
edition = "2021"
rust-version = "1.81"

# License
license = "Apache-2.0"

# Readme
readme = "README.md"

# Description
description   = "A fully customizable, feature-rich CLI framework for Rust. Define commands, prefixes, styled output, and more—built for flexibility and speed."

# Keywords (5 total)
keywords = [
    "cli",
    "framework",
    "terminal",
    "commands",
    "modular",
]

# Categories (5 total)
categories = [
    "command-line-interface", 
    "command-line-utilities", 
    "asynchronous", 
    "development-tools",
]

# Links
homepage      = "https://github.com/jamesgober/mod-cli"
repository    = "https://github.com/jamesgober/mod-cli"
documentation = "https://docs.rs/mod-cli"

# Authors
authors = [
    "James Gober <code@jamesgober.dev>"
]



#####################################################
# 📦 FEATURES
#####################################################
[package.metadata.docs.rs]
# Build docs with these features to maximize example coverage
features = ["json-loader", "plugins", "internal-commands", "custom-commands"]
all-features = false
no-default-features = false




#####################################################
# LIBRARY
#####################################################
[lib]
name = "modcli"
path = "src/lib.rs"




#####################################################
# BINARY
#####################################################
[[bin]]
name = "tool"
path = "bin/tool.rs"

[[bin]]
name = "modcli"
path = "bin/modcli.rs"




#####################################################
# EXAMPLES
#####################################################
[[example]]
name = "demo"
path = "examples/demo.rs"




#####################################################
# 📦 FEATURES
#####################################################
[features]
default = ["internal-commands", "custom-commands"]
plugins = []
internal-commands = []
custom-commands = []
json-loader = []
tracing-logs = ["dep:tracing", "dep:tracing-subscriber"]
dispatch-cache = []




#####################################################
# DEPENDENCIES
#####################################################
[dependencies]
thiserror = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Common dependencies
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18"

# Project dependencies
terminal_size = "0.1"
libloading = "0.7"
rpassword = "7.2.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
colorgrad = "0.6.0"
colored = "2.1.0"
console = "0.15"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }




#####################################################
# DEV DEPENDENCIES
#####################################################
[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
once_cell = "1.19"
criterion = { version = "0.5", features = ["html_reports"] }